<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>nismod</groupId>
	<artifactId>transport</artifactId>
	<version>2.3.0</version>
	<packaging>jar</packaging>

	<name>transport</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<geotools.version>20-RC</geotools.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-shapefile</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-swing</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-graph</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-brewer</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
  			<groupId>org.geotools</groupId>
 			<artifactId>gt-api</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
  			<groupId>org.geotools</groupId>
 			<artifactId>gt-main</artifactId>
  			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.0</version>
		</dependency>
			<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-math3</artifactId>
    		<version>3.6.1</version>
		</dependency>
		<dependency>
   			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
    		<groupId>org.hamcrest</groupId>
    		<artifactId>hamcrest-junit</artifactId>
    		<version>2.0.0.0</version>
    		<scope>test</scope>
		</dependency>
		<dependency>
   	 		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-lang3</artifactId>
    		<version>3.7</version>
		</dependency>
		<dependency>
    		<groupId>org.jfree</groupId>
    		<artifactId>jfreechart</artifactId>
    		<version>1.5.0</version>
		</dependency>
		<dependency>
    		<groupId>com.jgoodies</groupId>
    		<artifactId>jgoodies-forms</artifactId>
    		<version>1.8.0</version>
			</dependency>
	   	<dependency>
    		<groupId>commons-cli</groupId>
   			<artifactId>commons-cli</artifactId>
    		<version>1.4</version>
		</dependency>
 		 <dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
    		<groupId>net.sf.trove4j</groupId>
    		<artifactId>trove4j</artifactId>
    	<version>3.0.3</version>
		</dependency>
		<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-imaging</artifactId>
    		<version>1.0-alpha1</version>
		</dependency>
		<dependency>
	    	<groupId>org.locationtech.jts</groupId>
    		<artifactId>jts-core</artifactId>
    		<version>1.16.0-RC1</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>osgeod</id>
			<name>OSGeo Release Repository Deps</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots><enabled>false</enabled></snapshots>
			<releases><enabled>true</enabled></releases>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/Geoserver-releases/</url>
			<snapshots><enabled>false</enabled></snapshots>
			<releases><enabled>true</enabled></releases>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- See http://docs.geotools.org/latest/userguide/faq.html#how-do-i-create-an-executable-jar-for-my-geotools-app -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<!-- This bit sets the main class for the executable jar as you otherwise -->
								<!-- would with the assembly plugin -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>nismod.transport.App</Main-Class>
									</manifestEntries>
								</transformer>
								<!-- This bit merges the various GeoTools META-INF/services files -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
      			<groupId>org.codehaus.mojo</groupId>
        		<artifactId>license-maven-plugin</artifactId>
        		<version>1.16</version>
        		<executions>
         			<execution>
            			<id>download-licenses</id>
           				<goals>
             				<goal>download-licenses</goal>
           				</goals>
         			</execution>
       			</executions>
     		</plugin>
			<plugin>
    			<groupId>org.jacoco</groupId>
    			<artifactId>jacoco-maven-plugin</artifactId>
    			<version>0.8.1</version>
    			<executions>
        			<execution>
	            		<id>pre-unit-test</id>
            			<goals>
	                		<goal>prepare-agent</goal>
            			</goals>
            			<configuration>
            	    		<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
                			<propertyName>surefireArgLine</propertyName>
            			</configuration>
       				</execution>
        			<execution>
            			<id>post-unit-test</id>
            			<phase>test</phase>
            			<goals>
	                		<goal>report</goal>
            			</goals>
            			<configuration>
                			<excludes>
        						<exclude>nismod/transport/showcase/**/*</exclude>
        						<exclude>nismod/transport/visualisation/**/*</exclude>
        						<exclude>nismod/transport/optimisation/**/*</exclude>
        						<exclude>nismod/transport/scripts/**/*</exclude>
		        				<exclude>nismod/transport/App.class</exclude>
        					  </excludes>
                			<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
                			<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
            			</configuration>
        			</execution>
    			</executions>
			</plugin>
			<plugin>
		    	<groupId>org.apache.maven.plugins</groupId>
		    	<artifactId>maven-surefire-plugin</artifactId>
		    	<version>2.22.0</version>
		    	<configuration>
		        	<argLine>${surefireArgLine} -Xmx4g -XX:MaxPermSize=256m</argLine>
		        	<skipTests>${skip.unit.tests}</skipTests>
  		    	</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<links>
						<link>http://commons.apache.org/lang/api</link>
						<link>http://java.sun.com/j2se/1.5.0/docs/api</link>
						<link>http://this-one-will-not-work</link>
					</links>
				</configuration>
			</plugin>
		</plugins>
    </reporting>

</project>
